<resources>
    <string name="app_name">Food Planner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Mealoftheday">Meal of the day</string>
    <string name="default_web_client_id">692756677460-6v5n15j89fo9f5j9scflr9v98lg5cp4v.apps.googleusercontent.com</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="facebook_app_id">824502176476640</string>
    <string name="Country">Country</string>
    <string name="Name">Name</string>
    <string name="Category">Category</string>
    <string name="Ingredient">Ingredient</string>
    <string name="Categories">Categories</string>
    <string name="Countries">Countries</string>
    <string name="Ingredients">Ingredients</string>
    <string name="InspirtationMeal">Inspirtation Meals</string>
    <string name="Meals">Meals</string>
    <string name="sign_out">Sign Out</string>
    <string name="search_for_meal_by_category">Search for meal by Category</string>
    <string name="meals">Meals</string>
    <string name="home">Home</string>
    <string name="search_for_meal_by_ingredient">Search for meal by Ingredient</string>
    <string name="search_for_meal_by_country">Search for meal by Country</string>
    <string name="exit">Exit</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="origin_country">Origin: Country</string>
    <string name="ingredients">Ingredients:</string>
    <string name="steps">Steps</string>
    <string name="mealsteps">Steps:</string>

    <string name="British">British</string>
    <string name="American">America</string>
    <string name="French">French</string>
    <string name="Canadian">Canada</string>
    <string name="Jamaican">Jamaica</string>
    <string name="Chinese">China</string>
    <string name="Dutch">Dutch</string>
    <string name="Egyptian">Egypt</string>
    <string name="Greek">Greek</string>
    <string name="Indian">India</string>
    <string name="Irish">Irish</string>
    <string name="Italian">Italia</string>
    <string name="Japanese">Japan</string>
    <string name="Kenyan">Kenya</string>
    <string name="Malaysian">Malaysia</string>
    <string name="Mexican">Mexico</string>
    <string name="Moroccan">Morocco</string>
    <string name="Croatian">Croatia</string>
    <string name="Ukrainian">Ukrainia</string>
    <string name="Portuguese">Portugal</string>
    <string name="Russian">Russia</string>
    <string name="Filipino">Filipin</string>
    <string name="Spanish">Spain</string>
    <string name="Polish">Poland</string>
    <string name="Thai">Thai</string>
    <string name="Tunisian">Tunis</string>
    <string name="Vietnamese">Vietnam</string>
    <string name="Turkish">Turkey</string>
    <string name="Favourites">"Favourites Meals "</string>
    <string name="name">Name</string>
    <string name="add">add</string>
    <string name="nour_badran">Nour Badran</string>
    <string name="meal_name">Meal Name</string>
    <string name="category">Category</string>
    <string name="you_need_sign_up_to_access_favourite_meals">You need sign up to access locked contents</string>
    <string name="log_in">Log In</string>
    <string name="weekly_plan">Weekly Plan</string>
    <string name="get_random_meal">Get Random Meal</string>
    <string name="choose_from_meals">Choose from Meals</string>
    <string name="choose_from_favourites">Choose from Favourites</string>
    <string name="set_reminder_time">Set reminder time:</string>
    <string name="select_a_day_to_add_this_meal">Select a day to add this meal</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="meal_plan_for_the_week">Meal Plan for the Week</string>
    <string name="ready_to_start_planning_for_this_week">Ready to start planning for this week?</string>
    <string name="start_plan">Start Plan</string>
    <string name="create_my_own_plan">Create My Own Plan</string>
    <string name="login">Login</string>
    <string name="favourite_meals">Favourite Meals</string>
    <string name="themealdb">TheMealDB</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

</resources>