<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/btn_random_meal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_random_meal"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btn_choose_meal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_from_meals"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/btn_favourite_meal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_from_favourites"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary" />

</LinearLayout>
